--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "automation_javascript_ithillel",
-  "version": "1.0.0",
-  "description": "First project",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "npm",
-    "example"
-  ],
-  "author": "Den Zagrebelnyi",
-  "license": "ISC",
-  "dependencies": {
-    "chalk": "^5.3.0"
-  },
-  "type": "module"
+	"name": "automation_javascript_ithillel",
+	"version": "1.0.0",
+	"description": "First project",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"prepare": "husky",
+		"lint": "npx eslint --fix ."
+	},
+	"keywords": [
+		"npm",
+		"example"
+	],
+	"author": "Den Zagrebelnyi",
+	"license": "ISC",
+	"dependencies": {
+		"chalk": "^5.3.0",
+		"husky": "^9.0.11"
+	},
+	"type": "module",
+	"devDependencies": {
+		"@eslint/js": "^9.4.0",
+		"eslint": "^9.4.0",
+		"globals": "^15.4.0",
+		"prettier": "3.3.2"
+	}
 }
